Fix Contact Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ p {
 
 #contact .contato {
     flex-direction: column;
+    max-width: 70%;
     width: 1200px;
     margin: 0 auto;
 
@@ -364,6 +365,7 @@ p {
 
 #contact .contact-items {
     width: 100%;
+
 }
 
 #contact .contact-item {
@@ -541,8 +543,8 @@ p {
         flex-direction: row;
     }
 
-    #about .col-left{
-        width: 600px;
+    #about .col-left  {
+        width: 1500px;
         height: 400px;
         padding-left: 60px;
 
@@ -569,9 +571,9 @@ p {
     /* contact */
     #contact .contato {
         flex-direction: column;
-        padding: 100px 0;
-        align-items: center;
+        padding: 60px 0;
         justify-content: center;
+        align-items: center;
         min-width: 20vh;
     }
 
@@ -579,10 +581,11 @@ p {
         width: 100%;
         display: flex;
         flex-direction: row;
+        padding: 20px;
         margin: 0;
     }
 
-    #contact .contact-item {
+    #contact .contact-item{
         margin: 20px;
         flex-direction: row;
     }
